k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: specterdefence
  labels:
    app.kubernetes.io/name: specterdefence
    app.kubernetes.io/component: backend
    environment: production
