k8s/prod/marketing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: specterdefence-marketing
  namespace: specterdefence
  labels:
    app.kubernetes.io/name: specterdefence
    app.kubernetes.io/component: marketing
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: specterdefence
      app.kubernetes.io/component: marketing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: specterdefence
        app.kubernetes.io/component: marketing
        environment: production
    spec:
      imagePullSecrets:
        - name: ghcr-registry-secret
      containers:
      - name: specterdefence-marketing
        image: ghcr.io/michaeldigiacomi/specterdefence-marketing:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: specterdefence-marketing
  namespace: specterdefence
  labels:
    app.kubernetes.io/name: specterdefence
    app.kubernetes.io/component: marketing
spec:
  selector:
    app.kubernetes.io/name: specterdefence
    app.kubernetes.io/component: marketing
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
