k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: specterdefence
  namespace: specterdefence
  labels:
    app.kubernetes.io/name: specterdefence
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: specterdefence
  ports:
    - name: http
      port: 80
      targetPort: 8000
